update image file

--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
 
       <header>
         <h1>Angeliki Karkampasi</h1>
+
         <img
-          src="file:///C:/Users/sgxak/Downloads/Angeliki%20photo.jpg"
-          alt="Angeliki Karkampasi"
           class="profile-image"
+          src="https://github.com/Angelikikark/Online-Portofolio/blob/main/Angeliki%20photo.jpg?raw=true"
+          alt="Angeliki Karkampasi"
         />
 
         <p>
