--- a/index.html
+++ b/index.html
@@ -28,11 +28,22 @@
     body {
       font-family: "DM Serif Text", serif;
       scroll-behavior: smooth;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh; /* Full viewport height */
       margin: 0;
-      padding: 0;
+      padding: 20px;
+      text-align: center; /* Ensures text is centered */
       background-color: #f4f4f4;
     }
-
+    header,
+    section,
+    footer {
+      max-width: 800px; /* Limits width for better readability */
+      width: 100%;
+    }
     header {
       background: #c2a1b2;
       color: white;
