Update html with gifs

--- a/index.html
+++ b/index.html
@@ -253,82 +253,115 @@
 
       <section id="projects">
         <h2>Projects</h2>
+
         <div class="project">
           <h3>Weather App</h3>
           <p>
             Built a fully responsive weather application using JavaScript, HTML,
             CSS, and API integration.
           </p>
+
           <a
             href="https://github.com/Angelikikark/My-weather-application"
             target="_blank"
-            >GitHub link</a
           >
+            <img
+              src="https://github.com/Angelikikark/Online-Portofolio/blob/main/GitGif.gif?raw=true"
+              alt="GitHub"
+              width="40"
+            />
+          </a>
 
-          <a
-            href="https://github.com/Angelikikark/My-Ouranos-App"
-            target="_blank"
-            >GitHub link</a
-          >
-          <a href="https://ouranos-app.netlify.app/" target="_blank"
-            >Live Demo</a
-          >
+          <a href="https://ouranos-app.netlify.app/" target="_blank">
+            <img
+              src="https://github.com/Angelikikark/Online-Portofolio/blob/main/Live%20Demo.gif?raw=true"
+              alt="Live Demo"
+              width="40"
+            />
+          </a>
         </div>
+
         <div class="project">
           <h3>AI Holiday Generator</h3>
           <p>
             Built an AI Holiday Generator using JavaScript, HTML, CSS, and AI
             API integration.
           </p>
+
           <a
             href="https://github.com/Angelikikark/AI-Holiday-Generator"
             target="_blank"
-            >GitHub link</a
           >
-          <a href="https://ai-holiday-generator.netlify.app/" target="_blank"
-            >Live Demo</a
-          >
+            <img
+              src="https://github.com/Angelikikark/Online-Portofolio/blob/main/GitGif.gif?raw=true"
+              alt="GitHub"
+              width="40"
+            />
+          </a>
+
+          <a href="https://ai-holiday-generator.netlify.app/" target="_blank">
+            <img
+              src="https://github.com/Angelikikark/Online-Portofolio/blob/main/Live%20Demo.gif?raw=true"
+              alt="Live Demo"
+              width="40"
+            />
+          </a>
         </div>
+
         <div class="project">
           <h3>Quote Generator</h3>
           <p>Built a Quote Generator using JavaScript, HTML, and CSS.</p>
+
           <a
             href="https://github.com/Angelikikark/Carpe-Diem-Quote-Generator"
             target="_blank"
-            >GitHub Repo</a
           >
-          |
+            <img
+              src="https://github.com/Angelikikark/Online-Portofolio/blob/main/GitGif.gif?raw=true"
+              alt="GitHub"
+              width="40"
+            />
+          </a>
+
           <a
             href="https://carpediem-quotegenerator.netlify.app/"
             target="_blank"
-            >Live Demo</a
           >
+            <img src="https://github.com/Angelikikark/Online-Portofolio/blob/main/Live%20Demo.gif?raw=true" alt="Live Demo" width="40">
+</a>
+          </a>
         </div>
 
         <div class="project">
           <h3>Yoga Website</h3>
           <p>Built a Yoga website with basic HTML and CSS.</p>
+
           <a
             href="https://github.com/Angelikikark/My-Yoga-website"
             target="_blank"
-            >GitHub link</a
           >
-          <a href="https://passionforyoga.netlify.app/" target="_blank"
-            >Live Demo</a
-          >
+            <img src="https://github.com/Angelikikark/Online-Portofolio/blob/main/GitGif.gif?raw=true" alt="GitHub" width="40">
+</a>
+
+          <a href="https://passionforyoga.netlify.app/" target="_blank">
+            <img src="https://github.com/Angelikikark/Online-Portofolio/blob/main/Live%20Demo.gif?raw=true" alt="Live Demo" width="40">
+</a>
         </div>
+
         <div class="project">
           <h3>World Clock</h3>
           <p>Built a World Clock using HTML.</p>
-          <a href="https://github.com/Angelikikark/World-Clock" target="_blank"
-            >GitHub Repo</a
-          >
-          |
+
+          <a href="https://github.com/Angelikikark/World-Clock" target="_blank">
+            <img src="https://github.com/Angelikikark/Online-Portofolio/blob/main/GitGif.gif?raw=true" alt="GitHub" width="40">
+</a>
+
           <a
             href="https://world-clock-add-on-myproject.netlify.app/"
             target="_blank"
-            >Live Demo</a
           >
+           <img src="https://github.com/Angelikikark/Online-Portofolio/blob/main/Live%20Demo.gif?raw=true" alt="Live Demo" width="40">
+</a>
         </div>
       </section>
 
