--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
       justify-content: center;
       min-height: 100vh;
       margin: 0;
-      padding: 20px;
+        padding: 10px;
+
       text-align: center;
       background-color: #f4f4f4;
+      font-size: 16px;
+  line-height: 1.6;
     }
     header,
     section,
@@ -54,7 +57,7 @@ nav ul {
   list-style: none;
   padding: 0;
   display: flex;
-  justify-content: center; /* Keep the same alignment */
+  justify-content: center;
 }
 
 nav ul li {
