--- a/index.html
+++ b/index.html
@@ -311,6 +311,10 @@ button:focus {
     padding: 8px 12px;
   }
 
+@media (max-width: 768px)  {
+  .contact-info {
+    width: 100%;
+  }  }
 
   </style>
 
