--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ nav ul {
 
 nav ul li {
   display: inline;
-  margin: 0 15px; /* Maintain spacing */
+  margin: 0 15px; 
 }
 
 nav ul li button {
@@ -291,12 +291,17 @@ button:focus {
 
 
 
+ @media (max-width: 768px) {
+  .contact-info {
+    width: 100%; 
+  }
+
   #user-input {
-    width: 60%; 
+    width: 100%; 
   }
 
   button {
-    font-size: 10px; 
+    font-size: 14px;
     padding: 10px 15px;
   }
 
@@ -311,10 +316,7 @@ button:focus {
     padding: 8px 12px;
   }
 
-@media (max-width: 768px)  {
-  .contact-info {
-    width: 100%;
-  }  }
+}
 
   </style>
 
@@ -447,7 +449,7 @@ button:focus {
           >
             <img src="https://github.com/Angelikikark/Online-Portofolio/blob/main/Live%20Demo.gif?raw=true" alt="Live Demo" width="40">
 </a>
-          </a>
+          
         </div>
 
         <div class="project">
