--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@ button:focus {
 
 
  @media (max-width: 768px) {
+body{font-size:16px;}
+.container{padding:10px;}
   .contact-info {
     width: 100%; 
   }
