--- a/index.html
+++ b/index.html
@@ -296,6 +296,8 @@ body{font-size:16px;}
 .container{padding:10px;}
   .contact-info {
     width: 100%; 
+    right:0;
+    margin-left:auton;
   }
 
   #user-input {
