--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       text-align: center;
       padding: 20px;
     }
+
+.navbar{ max-width: 100%;
+  overflow:hidden;}
 nav ul {
   list-style: none;
   padding: 0;
