--- a/index.html
+++ b/index.html
@@ -292,7 +292,14 @@ button:focus {
   outline: none;
 }
 
-
+.button-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  gap:10px;
+  max-width: 90%;
+  margin:0 auto;
+}
 
  @media (max-width: 768px) {
 body{font-size:16px;}
@@ -301,6 +308,12 @@ body{font-size:16px;}
     width: 100%; 
     right:0;
     margin-left:auton;
+    
+.contact-button{
+  width:100%;
+  max-width:200px;
+    margin:0 auto;}
+
   }
 
   #user-input {
